# Study.MachineLearning

transformer/attention-is-all-you-need/: README.md  data.py  main.py  pyproject.toml
transformer/attention-is-all-you-need/model/: batch.py  feed_forward.py  head.py  model.py
transformer/nanogpt/: .gitignore  main.py  pyproject.toml
