[project]
name = "time-is-all-you-need"
version = "0.1.0"
description = ""
authors = [
    {name = "Matias Wallenius",email = "MatiWall@live.dk"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "torch (>=2.11.0,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "datasets (>=4.8.4,<5.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "transformers (>=5.5.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
