[project]
name = "nanogpt"
version = "0.1.0"
description = ""
authors = [
    {name = "Matias Wallenius",email = "MatiWall@live.dk"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch (>=2.11.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
